FoursquareVenues Save changed

--- a/Foursquare/FoursquareVenues.ipynb
+++ b/Foursquare/FoursquareVenues.ipynb
@@ -251,7 +251,9 @@
    },
    "outputs": [],
    "source": [
-    "with open('Checkins.geojson', 'w') as f:\n",
+    "filepath = 'Venues.geojson'\n",
+    "\n",
+    "with open(filepath, 'w') as f:\n",
     "    f.write(to_geojson(venues))"
    ]
   },
